--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Four card feature section</title>
 </head>
@@ -10,8 +11,8 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1>Reliable, efficient delivery</h1>
-      <h1>Powered by Technology</h1>
+      <h1 class="h-light">Reliable, efficient delivery</h1>
+      <h1 class="h-bold">Powered by Technology</h1>
       <p>
         Our Artificial Intelligence powered tools use millions of project data points
         to ensure that your project is successful
@@ -27,34 +28,35 @@
         <img src="img/icon-supervisor.svg" alt="magnifying glass">
       </div>
     </div>
-  </div>
-  <div class="card">
-    <div class="card-heading">
-      <h3>Team Builder</h3>
-      <p>
-        Scans our talent network to create the optimal team for your project
-      </p>
-      <img src="img/icon-team-builder.svg" alt="red house with grey background page">
+    <div class="card">
+      <div class="card-heading">
+        <h3>Team Builder</h3>
+        <p>
+          Scans our talent network to create the optimal team for your project
+        </p>
+        <img src="img/icon-team-builder.svg" alt="red house with grey background page">
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-heading">
+        <h3>Karma</h3>
+        <p>
+          Regularly evaluates our talent to ensure quality
+        </p>
+        <img src="img/icon-karma.svg" alt="light bulb">
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-heading">
+        <h3>Calculator</h3>
+        <p>
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <img src="img/icon-calculator.svg" alt="monitor">
+      </div>
     </div>
   </div>
-  <div class="card">
-    <div class="card-heading">
-      <h3>Karma</h3>
-      <p>
-        Regularly evaluates our talent to ensure quality
-      </p>
-      <img src="img/icon-karma.svg" alt="light bulb">
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-heading">
-      <h3>Calculator</h3>
-      <p>
-        Uses data from past projects to provide better delivery estimates
-      </p>
-      <img src="img/icon-calculator.svg" alt="monitor">
-    </div>
-  </div>
+
 </body>
 <footer>
   <p class="attribution">
