--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="img/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <title>Frontend Mentor | Four card feature section</title>
   </head>
 
